cmake_minimum_required(VERSION 3.9...3.18)
project(cmake_example VERSION 0.1.0 DESCRIPTION "An example CMake project to be used as a template" LANGUAGES CXX)

add_executable(cmake_example hello.cpp)
target_compile_features(cmake_example PUBLIC cxx_std_17)
set_target_properties(cmake_example PROPERTIES CXX_EXTENSIONS OFF)

if ( CMAKE_CXX_COMPILER_ID MATCHES "Clang|AppleClang|GNU" )
    target_compile_options( cmake_example PRIVATE -Wall -Wextra -Wunreachable-code -Wpedantic)
endif()
if ( CMAKE_CXX_COMPILER_ID MATCHES "Clang" )
    target_compile_options( cmake_example PRIVATE -Wweak-vtables -Wexit-time-destructors -Wglobal-constructors -Wmissing-noreturn )
endif()
if ( CMAKE_CXX_COMPILER_ID MATCHES "MSVC" )
    target_compile_options( cmake_example PRIVATE /W4 /w44265 /w44061 /w44062 )
endif()
